Bug:67850 Serenity tree headers are too dark in IE
Created a separate selector for applying the background color and attached it to the TD rather than the TABLE tag so IE will play nice.

http://bugzilla.zimbra.com/show_bug.cgi?id=67850

Copied from Perforce
 Change: 340886

--- a/WebRoot/skins/_base/base3/skin.css
+++ b/WebRoot/skins/_base/base3/skin.css
@@ -464,7 +464,10 @@ SELECT						{	@FieldBorder@	}
 .overviewHeader,
 .overviewHeader-actioned			{ background-color:@darken(AppC,20)@; border:0; padding:1px 0; 	}
 .overviewHeader>TABLE,
-.overviewHeader-actioned>TABLE 		{ background-color:@lighten(AppC,33)@; border:1px solid white; 	}
+.overviewHeader-actioned>TABLE 		{ border:1px solid white; 	}
+/* IE doesn't support backgrounds on TABLE so put bkgd on TD */
+.overviewHeader TD,
+.overviewHeader-actioned TD 		{ background-color:@lighten(AppC,33)@;	}
 .overviewHeader .ZButton,
 .overviewHeader-actioned .ZButton	{ height:auto;	}
 .RowDouble							{ height:auto; padding-top:0; 		}
